--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
-/.vs/
-/Debug/
-/x64/
-/ipch/
-/Client/Debug/
-/Client/x64/
-/Data/
-/Image/
-/Sound/
+# Visual C++ cache files
+.vs/
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
+
+# Resource files
+Debug/
+Release/
+Client/Debug/
+Client/Release/
+Data/
+Image/
+Sound/
